--- a/backend/package.json
+++ b/backend/package.json
@@ -2,26 +2,22 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "jest --forceExit",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test": "jest",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "axios": "^1.8.4",
+    "axios": "^1.6.7",
+    "@faker-js/faker": "^8.4.1",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "@vitest/coverage-v8": "^3.1.1",
-    "c8": "^10.1.3",
-    "jest": "^29.7.0",
-    "supertest": "^7.1.0",
-    "vitest": "^3.1.1"
+    "jest": "^29.7.0"
   }
 }
