--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "@faker-js/faker": "^8.4.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
