--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,9 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "axios": "^1.6.7",
     "chart.js": "^4.4.8",
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "pinia": "^3.0.1",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.3.2",
@@ -23,7 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue": "^5.2.4",
     "@vitest/coverage-istanbul": "^3.0.8",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/test-utils": "^2.4.6",
@@ -35,7 +36,7 @@
     "postcss": "^8.4.31",
     "prettier": "3.5.3",
     "tailwindcss": "^3.3.5",
-    "vite": "^4.4.5",
+    "vite": "^6.3.5",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.8"
   }
