--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
     "@faker-js/faker": "^8.4.1",
     "@prisma/client": "^5.10.0",
     "axios": "^1.6.7",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "ws": "^8.14.2"
   },
