--- a/.dockerignore
+++ b/.dockerignore
@@ -1,29 +1,25 @@
-# Git
-.git
-.gitignore
-.gitattributes
-
-# Node.js
+# Node modules
 node_modules
 npm-debug.log
-yarn-debug.log
-yarn-error.log
 
 # Build files
 dist
 build
-coverage
 
 # Environment variables
-
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# IDE files
-.idea
+# Git files
+.git
+.gitignore
+
+# Editor files
 .vscode
+.idea
 *.swp
 *.swo
 
