--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,13 +6,19 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm install
 
 # Copy the rest of the application
 COPY . .
 
 # Build the application
 RUN npm run build
+
+# Expose the port the app runs on
+EXPOSE 5173
+
+# Command to run the application
+CMD ["npm", "run", "dev"]
 
 # Production stage
 FROM nginx:stable-alpine as production-stage
