--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "bcrypt": "^6.0.0",
     "@faker-js/faker": "^8.4.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
