--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "serve": "node server.js",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
     "test": "vitest",
@@ -16,6 +17,7 @@
     "@faker-js/faker": "^8.4.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.8",
+    "express": "^4.18.2",
     "faker": "^5.5.3",
     "pinia": "^3.0.1",
     "vue": "^3.3.4",
