--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,8 +1,11 @@
 [phases.setup]
-nixPkgs = ["nodejs", "postgresql"]
+nixPkgs = ["nodejs"]
 
 [phases.install]
-cmds = ["npm install", "npx prisma generate"]
+cmds = ["npm install"]
+
+[phases.build]
+cmds = ["npx prisma generate"]
 
 [start]
 cmd = "npm start" 
